gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-builtin_syntax_dg.rs
struct Foo {
    v: u8,
    w: u8,
}
fn main() {
    builtin # offset_of(Foo, v); // { dg-error ".E0658." "" { target *-*-* } }
}

